--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
 jobs:
   hello-world:
     docker:
-      image: cimage/node:15.1
+      image: cimg/node:15.1
     
     steps:
       - checkout
