--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,8 @@ aliases:
       key: v1-node-{{ arch }}-{{ checksum "yarn.lock" }}-yarn
   - &restore_node_modules_cache
     restore_cache:
-      name:  Restore node_modules cache
-      keys: v1-node-{{ arch }}-{{ .Branch }}-{{ checksum "yarn.lock" }}-node_modules
+      name: Restore node_modules cache
+      key: v1-node-{{ arch }}-{{ .Branch }}-{{ checksum "yarn.lock" }}-node_modules
 
 orbs:
   node: circleci/node@4.1
