--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,11 @@ orbs:
   aws-ecr: circleci/aws-ecr@7.0.0
   aws-ecs: circleci/aws-ecs@2.2.1
 
+executors:
+  ecr-docker-build:
+    machine:
+      use-docker-layer-caching: true
+
 jobs:
   setup:
     docker: *docker
@@ -81,9 +86,10 @@ workflows:
             - test
             - lint
       - aws-ecr/build-and-push-image:
+          executor: ecr-docker-build
           context: AWS
           repo: ci-cd
-          tag: "latest,${CIRCLE_SHA1}"
+          tag: "${CIRCLE_SHA1}"
           path: .
           remote-docker-layer-caching: true
           requires:
