--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,7 +96,7 @@ workflows:
       - aws-ecs/deploy-service-update:
           context: AWS
           family: ci-cd-task
-          cluster-name: 'ci-cd-cluster'
+          cluster-name: 'ci-cd'
           container-image-name-updates: "container=ci-cd-container,tag=${CIRCLE_SHA1}"
           requires:
             - aws-ecr/build-and-push-image
