--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,6 +97,7 @@ workflows:
           context: AWS
           family: ci-cd-task
           cluster-name: 'ci-cd'
+          service-name: 'ci-cd-service'
           container-image-name-updates: "container=ci-cd-container,tag=${CIRCLE_SHA1}"
           requires:
             - aws-ecr/build-and-push-image
