--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,8 @@ aliases:
 
 orbs:
   node: circleci/node@4.1
-  # aws-ecr: circleci/aws-ecr@7.0.0
-  # aws-ecs: circleci/aws-ecs@2.2.1
+  aws-ecr: circleci/aws-ecr@7.0.0
+  aws-ecs: circleci/aws-ecs@2.2.1
 
 executors:
   ecr-docker-build:
