--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
           name: NodeJS Version
           command: node --version
       - *restore_yarn_cache
-      - run: echo ${DOCKER_LOGIN}
+      - run: echo $DOCKER_LOGIN
       - run:
           name: Install Package
           command: yarn --frozen-lockfile --cache-folder ~/.cache/yarn
@@ -83,16 +83,17 @@ jobs:
             echo 'export TAG=0.1.${CIRCLE_BUILD_NUM}' >> ${BASH_ENV}
             echo 'export IMAGE_NAME=${CIRCLE_PROJECT_REPONAME}' >> ${BASH_ENV}
             source ${BASH_ENV}
-            docker build -t ${DOCKER_LOGIN}/${IMAGE_NAME} -t ${DOCKER_LOGIN}/${IMAGE_NAME}:${TAG}
-            echo ${DOCKER_PWD} | docker login -u ${DOCKER_LOGIN} --password-stdin
-            docker push ${DOCKER_LOGIN}/${IMAGE_NAME}
+            docker build -t $DOCKER_LOGIN/${IMAGE_NAME} -t $DOCKER_LOGIN/${IMAGE_NAME}:${TAG} .
+            echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
+            docker push $DOCKER_LOGIN/${IMAGE_NAME}
 
 
 
 workflows:
   build-and-deploy:
     jobs:
-      - setup
+      - setup:
+          context: DOCKER
       - test:
           requires:
             - setup
@@ -104,6 +105,7 @@ workflows:
             - test
             - lint
       - docker_hub_build_push_image:
+          context: DOCKER
           requires:
             - build
           filters:
