--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,6 @@ jobs:
           name: NodeJS Version
           command: node --version
       - *restore_yarn_cache
-      - run: echo $DOCKER_LOGIN
       - run:
           name: Install Package
           command: yarn --frozen-lockfile --cache-folder ~/.cache/yarn
@@ -76,6 +75,7 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker:
+          version: 19.03.13
           docker_layer_caching: false
       - run:
           name: Build and push Docker image to Docker Hub
@@ -92,8 +92,7 @@ jobs:
 workflows:
   build-and-deploy:
     jobs:
-      - setup:
-          context: DOCKER
+      - setup
       - test:
           requires:
             - setup
