--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,7 +80,7 @@ jobs:
       - run:
           name: Build and push Docker image to Docker Hub
           command: |
-            echo 'export TAG=0.1.${CIRCLE_BUILD_NUM}' >> ${BASH_ENV}
+            echo 'export TAG=${CIRCLE_SHA1}' >> ${BASH_ENV}
             echo 'export IMAGE_NAME=${CIRCLE_PROJECT_REPONAME}' >> ${BASH_ENV}
             source ${BASH_ENV}
             docker build -t $DOCKER_LOGIN/${IMAGE_NAME} -t $DOCKER_LOGIN/${IMAGE_NAME}:${TAG} .
@@ -112,9 +112,11 @@ workflows:
               only:
                 - main
       - aws-ecr/build-and-push-image:
-          context: AWS
-          repo: ci-cd
-          tag: "latest,${CIRCLE_BUILD_NUM}"
+          context: 
+            - AWS
+            - ECR
+          repo: $ECR_REPO
+          tag: "latest,${CIRCLE_SHA1}"
           path: .
           remote-docker-layer-caching: true
           requires:
@@ -124,11 +126,13 @@ workflows:
               only:
                 - main
       - aws-ecs/deploy-service-update:
-          context: AWS
-          family: ci-cd-task
-          cluster-name: 'ci-cd'
-          service-name: 'ci-cd-service'
-          container-image-name-updates: "container=ci-cd-container,tag=${CIRCLE_BUILD_NUM}"
+          context: 
+            - AWS
+            - ECS
+          family: $ECS_FAMILY
+          cluster-name:  $ECS_CLUSTER_NAME
+          service-name: $ECS_SERVICE_NAME
+          container-image-name-updates: "container=$ECS_CONTAINER,tag=${CIRCLE_SHA1}"
           requires:
             - aws-ecr/build-and-push-image
           filters:
