--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,7 +76,7 @@ jobs:
       - checkout
       - setup_remote_docker:
           version: 19.03.13
-          docker_layer_caching: true
+          docker_layer_caching: false
       - run:
           name: Build and push Docker image to Docker Hub
           command: |
