--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --reporters=jest-junit",
     "eject": "react-scripts eject",
     "lint": "eslint '*/**/*.{js.ts,tsx}' --quiet --fix",
     "storybook": "start-storybook -p 6006 -s public",
