--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,8 @@ aliases:
 
 orbs:
   node: circleci/node@4.1
-  aws-ecr: circleci/aws-ecr@7.0.0
-  aws-ecs: circleci/aws-ecs@2.2.1
+  # aws-ecr: circleci/aws-ecr@7.0.0
+  # aws-ecs: circleci/aws-ecs@2.2.1
 
 jobs:
   setup:
@@ -87,6 +87,16 @@ jobs:
             echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
             docker push $DOCKER_LOGIN/${IMAGE_NAME}
 
+  deploy:
+    - checkout
+    - run:
+        name: Installing AWS CLI
+        command: |
+          sudo apt-get update
+          sudo apt install python3-pip
+          sudo pip3 install awsebcli --upgrade
+    - run: aws s3 sync build s3://ci-cd-research
+
 workflows:
   build-and-deploy:
     jobs:
@@ -109,32 +119,40 @@ workflows:
             branches:
               only:
                 - main
-      - aws-ecr/build-and-push-image:
-          context: 
-            - AWS
-            - ECR
-          repo: $ECR_REPO
-          tag: "latest,${CIRCLE_SHA1}"
-          path: .
-          remote-docker-layer-caching: true
+      - deploy:
+          context: AWS
           requires:
-            - build
+            - docker_hub_build_push_image
           filters:
             branches:
               only:
                 - main
-      - aws-ecs/deploy-service-update:
-          context: 
-            - AWS
-            - ECS
-          family: $ECS_FAMILY
-          cluster-name:  $ECS_CLUSTER_NAME
-          service-name: $ECS_SERVICE_NAME
-          container-image-name-updates: "container=$ECS_CONTAINER,tag=${CIRCLE_SHA1}"
-          requires:
-            - aws-ecr/build-and-push-image
-          filters:
-            branches:
-              only:
-                - main
+      # - aws-ecr/build-and-push-image:
+      #     context: 
+      #       - AWS
+      #       - ECR
+      #     repo: $ECR_REPO
+      #     tag: "latest,${CIRCLE_SHA1}"
+      #     path: .
+      #     remote-docker-layer-caching: true
+      #     requires:
+      #       - build
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      # - aws-ecs/deploy-service-update:
+      #     context: 
+      #       - AWS
+      #       - ECS
+      #     family: $ECS_FAMILY
+      #     cluster-name:  $ECS_CLUSTER_NAME
+      #     service-name: $ECS_SERVICE_NAME
+      #     container-image-name-updates: "container=$ECS_CONTAINER,tag=${CIRCLE_SHA1}"
+      #     requires:
+      #       - aws-ecr/build-and-push-image
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
       
