--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,14 +90,15 @@ jobs:
   deploy:
     docker: *docker
 
-    - checkout
-    - run:
-        name: Installing AWS CLI
-        command: |
-          sudo apt-get update
-          sudo apt install python3-pip
-          sudo pip3 install awsebcli --upgrade
-    - run: aws s3 sync build s3://ci-cd-research
+    steps:
+      - checkout
+      - run:
+          name: Installing AWS CLI
+          command: |
+            sudo apt-get update
+            sudo apt install python3-pip
+            sudo pip3 install awsebcli --upgrade
+      - run: aws s3 sync build s3://ci-cd-research
 
 workflows:
   build-and-deploy:
