--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,10 +56,9 @@ jobs:
       - *restore_node_modules_cache
       - run: yarn test
       - store_artifacts:
-          path: /tmp/test-results
-          destination: results
+          path: /reports/junit
       - store_test_results:
-          path: /tmp/test-results
+          path: /reports/junit/
 
   build:
     docker: *docker
