--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --reporters=jest-junit",
+    "test": "react-scripts test --ci --runInBand --reporters=default --reporters=jest-junit",
     "eject": "react-scripts eject",
     "lint": "eslint '*/**/*.{js.ts,tsx}' --quiet --fix",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
   },
   "jest-junit": {
-      "outputDirectory": "tmp/test_results/",
+      "outputDirectory": "reports/junit",
       "outputName": "results.xml"
   },
   "resolutions": {
