fix aws not found

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,8 @@
 version: 2.1
 
 aliases:
+  - &machine
+    - image: ubuntu-2004:202010-01
   - &docker
     - image: cimg/node:15.1
   - &restore_yarn_cache
@@ -87,7 +89,7 @@ jobs:
             docker push $DOCKER_LOGIN/${IMAGE_NAME}
 
   deploy:
-    docker: *docker
+    machine: *machine
 
     steps:
       - checkout
