--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,8 +2,7 @@ version: 2.1
 
 aliases:
   - &machine
-    machine: 
-      image: ubuntu-2004:202010-01
+    image: ubuntu-2004:202010-01
   - &docker
     - image: cimg/node:15.1
   - &restore_yarn_cache
@@ -90,7 +89,7 @@ jobs:
             docker push $DOCKER_LOGIN/${IMAGE_NAME}
 
   deploy:
-    - *machine
+    machine: *machine
 
     steps:
       - checkout
