--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -99,7 +99,8 @@ jobs:
             sudo apt-get update
             sudo apt install python3-pip
             sudo pip3 install awsebcli --upgrade
-      - run: aws s3 sync /build s3://ci-cd-research
+      - run: pwd
+      - run: aws s3 sync ./build s3://ci-cd-research
 
 workflows:
   build-and-deploy:
