--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -100,7 +100,8 @@ jobs:
             sudo apt install python3-pip
             sudo pip3 install awsebcli --upgrade
       - run: pwd
-      - run: aws s3 sync ./build s3://ci-cd-research
+      - run: ls
+      - run: aws s3 sync build/ s3://ci-cd-research
 
 workflows:
   build-and-deploy:
@@ -116,18 +117,18 @@ workflows:
           requires:
             - test
             - lint
-      - docker_hub_build_push_image:
-          context: DOCKER
-          requires:
-            - build
-          filters:
-            branches:
-              only:
-                - main
+      # - docker_hub_build_push_image:
+      #     context: DOCKER
+      #     requires:
+      #       - build
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
       - deploy:
           context: AWS
           requires:
-            - docker_hub_build_push_image
+            - build
           filters:
             branches:
               only:
