--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,7 +103,7 @@ jobs:
             sudo apt-get update
             sudo apt install python3-pip
             sudo pip3 install awsebcli --upgrade
-      - *restore_node_modules_cache
+      - run: yarn
       - run: yarn build
       - run: aws s3 sync build s3://ci-cd-research
 
