use awscli instead of awsebcli

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -102,7 +102,7 @@ jobs:
           command: |
             sudo apt-get update
             sudo apt install python3-pip
-            sudo pip3 install awsebcli --upgrade
+            sudo pip3 install awscli --upgrade
       - *restore_node_modules_cache
       - run: yarn build
       - run: aws s3 sync build s3://ci-cd-research
