--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
   },
+  "jest-junit": {
+      "outputFile": "./reports/junit/results.xml"
+  },
   "resolutions": {
     "babel-loader": "8.1.0"
   },
