--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -120,7 +120,8 @@ workflows:
       - build:
           matrix:
             parameters:
-              platform: ['macos', 'windows', 'linux']
+              version: ["0.1", "0.2", "0,3"]
+              platform: ["macos", "windows", "linux"]
           requires:
             - test
             - lint
