--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,8 @@ aliases:
 
 orbs:
   node: circleci/node@4.1
-  # aws-ecr: circleci/aws-ecr@7.0.0
-  # aws-ecs: circleci/aws-ecs@2.2.1
+  aws-ecr: circleci/aws-ecr@7.0.0
+  aws-ecs: circleci/aws-ecs@2.2.1
 
 jobs:
   setup:
@@ -129,42 +129,42 @@ workflows:
             branches:
               only:
                 - main
-      - deploy:
-          context: 
-            - AWS
-            - S3
-          requires:
-            - build
-          filters:
-            branches:
-              only:
-                - main
-      # - aws-ecr/build-and-push-image:
+      # - deploy:
       #     context: 
       #       - AWS
-      #       - ECR
-      #     repo: $ECR_REPO
-      #     tag: "latest,${CIRCLE_SHA1}"
-      #     path: .
-      #     remote-docker-layer-caching: true
+      #       - S3
       #     requires:
       #       - build
       #     filters:
       #       branches:
       #         only:
       #           - main
-      # - aws-ecs/deploy-service-update:
-      #     context: 
-      #       - AWS
-      #       - ECS
-      #     family: $ECS_FAMILY
-      #     cluster-name:  $ECS_CLUSTER_NAME
-      #     service-name: $ECS_SERVICE_NAME
-      #     container-image-name-updates: "container=$ECS_CONTAINER,tag=${CIRCLE_SHA1}"
-      #     requires:
-      #       - aws-ecr/build-and-push-image
-      #     filters:
-      #       branches:
-      #         only:
-      #           - main
+      - aws-ecr/build-and-push-image:
+          context: 
+            - AWS
+            - ECR
+          repo: $ECR_REPO
+          tag: "latest,${CIRCLE_SHA1}"
+          path: .
+          remote-docker-layer-caching: true
+          requires:
+            - build
+          filters:
+            branches:
+              only:
+                - main
+      - aws-ecs/deploy-service-update:
+          context: 
+            - AWS
+            - ECS
+          family: $ECS_FAMILY
+          cluster-name:  $ECS_CLUSTER_NAME
+          service-name: $ECS_SERVICE_NAME
+          container-image-name-updates: "container=$ECS_CONTAINER,tag=${CIRCLE_SHA1}"
+          requires:
+            - aws-ecr/build-and-push-image
+          filters:
+            branches:
+              only:
+                - main
       
