--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -119,14 +119,14 @@ workflows:
           requires:
             - test
             - lint
-      - docker_hub_build_push_image:
-          context: DOCKER
-          requires:
-            - build
-          filters:
-            branches:
-              only:
-                - main
+      # - docker_hub_build_push_image:
+      #     context: DOCKER
+      #     requires:
+      #       - build
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
       # - deploy:
       #     context: 
       #       - AWS
