--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ orbs:
   node: circleci/node@4.1
   aws-ecr: circleci/aws-ecr@7.0.0
   aws-ecs: circleci/aws-ecs@2.2.1
+  codecov: codecov/codecov@1.0.2
 
 jobs:
   setup:
@@ -66,6 +67,8 @@ jobs:
           path: ./reports/junit
       - store_test_results:
           path: ./reports/junit/
+      - codecov/upload:
+          file: ./coverage
 
   build:
     <<: *defaults
@@ -154,7 +157,7 @@ workflows:
       - aws-ecs/deploy-service-update:
           context: 
             - AWS
-            - ECS
+            - ECSa
           family: $ECS_FAMILY
           cluster-name:  $ECS_CLUSTER_NAME
           service-name: $ECS_SERVICE_NAME
