add context for code coverage in test job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,6 +113,8 @@ workflows:
     jobs:
       - setup
       - test:
+          context:
+            - CODECOV
           requires:
             - setup
       - lint:
