--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,7 +68,7 @@ jobs:
       - store_test_results:
           path: ./reports/junit/
       - codecov/upload:
-          file: ./coverage
+          file: ./coverage/clover.xml
 
   build:
     <<: *defaults
