--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,6 +113,7 @@ workflows:
     jobs:
       - setup
       - test:
+          context: CODECOV
           requires:
             - setup
       - lint:
