added new scripts [ci skip]

--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --ci --runInBand --coverage --reporters=jest-junit",
+    "test": "react-scripts test --ci --runInBand --reporters=jest-junit",
+    "test:coverage": "react-scripts test --watchAll --coverage",
     "eject": "react-scripts eject",
-    "lint": "eslint '*/**/*.{js.ts,tsx}' --quiet --fix",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --quiet",
+    "lint-fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
   },
