--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -184,18 +184,18 @@ workflows:
             branches:
               only:
                 - main
-      - aws-ecs/deploy-service-update:
-          context: 
-            - AWS
-            - ECS
-          family: $ECS_FAMILY
-          cluster-name:  $ECS_CLUSTER_NAME
-          service-name: $ECS_SERVICE_NAME
-          container-image-name-updates: "container=$ECS_CONTAINER,tag=${CIRCLE_SHA1}"
-          requires:
-            - aws-ecr/build-and-push-image
-          filters:
-            branches:
-              only:
-                - main
+      # - aws-ecs/deploy-service-update:
+      #     context: 
+      #       - AWS
+      #       - ECS
+      #     family: $ECS_FAMILY
+      #     cluster-name:  $ECS_CLUSTER_NAME
+      #     service-name: $ECS_SERVICE_NAME
+      #     container-image-name-updates: "container=$ECS_CONTAINER,tag=${CIRCLE_SHA1}"
+      #     requires:
+      #       - aws-ecr/build-and-push-image
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
       
