--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build-storybook": "build-storybook -s public"
   },
   "jest-junit": {
-      "outputFile": "./reports/junit/results.xml"
+    "outputFile": "./reports/junit/results.xml"
   },
   "resolutions": {
     "babel-loader": "8.1.0"
@@ -74,6 +74,7 @@
     "@storybook/react": "^6.3.6",
     "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.11",
+    "cypress": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "jest-junit": "^12.2.0",
