--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,7 +84,7 @@ jobs:
 
   test-cypress:
     docker:
-      - image: cypress/bse:14.16.0
+      - image: cypress/base:14.16.0
         environment:
           TERM: xterm
     steps:
