--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,7 +103,7 @@ jobs:
             - ~/.cache
       - run:
           name: Run test with cypress
-          command: $(yarn bin)/cypress run --record --key CypressTestingKey
+          command: yarn run test:e2e
   build:
     <<: *defaults
     steps:
