--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -101,6 +101,7 @@ jobs:
           key: v2-node-{{ arch }}-{{ checksum "yarn.lock" }}-cypress
           paths:
             - ~/.cache
+      - run: yarn start
       - run:
           name: Run test with cypress
           command: yarn run test:e2e
