--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,7 +104,7 @@ jobs:
       - run: yarn start
       - run:
           name: Run test with cypress
-          command: yarn run test:e2e
+          command: yarn run start-test:e2e
       - store_test_results:
           path: ./reports/e2e
       - store_artifacts:
