--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "test": "react-scripts test --ci --runInBand --reporters=jest-junit",
     "test:coverage": "react-scripts test --watchAll=false --coverage",
     "test:e2e": "cypress run --reporter junit --reporter-options 'mochaFile=reports/e2e/results.xml'",
+    "start-test:e2e": "start-server-and-test start http://localhost:3000 test:e2e",
     "eject": "react-scripts eject",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --quiet",
     "lint-fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
@@ -79,6 +80,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "jest-junit": "^12.2.0",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "start-server-and-test": "^1.13.1"
   }
 }
