--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ aliases:
   - &TEST_PARALLELISM 2
 
   - &attach_workspace
-      at: build
+      at: build5t%$R7?>>>>>>>>>>>>>>>>>>>>>
 
 defaults: &defaults
   docker: *docker
@@ -226,18 +226,18 @@ workflows:
             branches:
               only:
                 - main
-      # - aws-ecs/deploy-service-update:
-      #     context: 
-      #       - AWS
-      #       - ECS
-      #     family: $ECS_FAMILY
-      #     cluster-name:  $ECS_CLUSTER_NAME
-      #     service-name: $ECS_SERVICE_NAME
-      #     container-image-name-updates: "container=$ECS_CONTAINER,tag=${CIRCLE_SHA1}"
-      #     requires:
-      #       - aws-ecr/build-and-push-image
-      #     filters:
-      #       branches:
-      #         only:
-      #           - main
+      - aws-ecs/deploy-service-update:
+          context: 
+            - AWS
+            - ECS
+          family: $ECS_FAMILY
+          cluster-name:  $ECS_CLUSTER_NAME
+          service-name: $ECS_SERVICE_NAME
+          container-image-name-updates: "container=$ECS_CONTAINER,tag=${CIRCLE_SHA1}"
+          requires:
+            - aws-ecr/build-and-push-image
+          filters:
+            branches:
+              only:
+                - main
       
